<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddHappyPlaceActivity">
    
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_Add_place"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"

        android:background="@color/dodgerBlue"
        android:theme="@style/CustomToolBarStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
    />

    <ScrollView
        android:id="@+id/main_SV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tool_Add_place"
    >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/main_content_padding"
            >

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/txtTitleMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                android:textColorHint="@color/navy"
                app:hintTextColor="@color/navy"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/txtTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/edit_text_hint_tittle"
                    android:inputType="textCapWords"
                    android:textColor="@color/navy"
                    android:textColorHint="@color/navy"
                    android:textSize="@dimen/edit_text_text_size"
                />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/txtDescriptionMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                android:textColorHint="@color/navy"
                app:hintTextColor="@color/navy"
                android:layout_marginTop="@dimen/add_screen_til_marginTop"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtTitleMain">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/txtDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edit_text_hint_description"
                    android:inputType="textCapSentences"
                    android:textColor="@color/navy"
                    android:textColorHint="@color/navy"
                    android:textSize="@dimen/edit_text_text_size"
                />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/txtDateMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                android:textColorHint="@color/navy"
                app:hintTextColor="@color/navy"

                android:layout_marginTop="@dimen/add_screen_til_marginTop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtDescriptionMain">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/txtDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/edit_text_hint_date"
                    android:inputType="text"
                    android:textColor="@color/navy"
                    android:textColorHint="@color/navy"
                    android:textSize="@dimen/edit_text_text_size"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/txtLocationMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                android:textColorHint="@color/navy"
                app:hintTextColor="@color/navy"

                android:layout_marginTop="@dimen/add_screen_til_marginTop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtDateMain">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/txtLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/edit_text_hint_location"
                    android:inputType="textCapWords"
                    android:textColor="@color/navy"
                    android:textColorHint="@color/navy"
                    android:textSize="@dimen/edit_text_text_size"
                />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgPlaceImage"
                android:layout_width="@dimen/add_screen_place_image_size"
                android:layout_height="@dimen/add_screen_place_image_size"
                android:layout_marginTop="@dimen/add_screen_place_image_marginTop"
                android:background="@drawable/shape_image_view_border"
                android:padding="@dimen/add_screen_place_image_padding"
                android:scaleType="centerCrop"
                android:src="@drawable/add_screen_image_placeholder"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtLocationMain"
            />

            <TextView
                android:id="@+id/txtAddImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/add_screen_text_add_image_marginTop"
                android:background="?attr/selectableItemBackground"
                android:gravity="center"
                android:padding="@dimen/add_screen_text_add_image_padding"
                android:text="@string/text_add_image"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/navy"
                android:textColorHint="@color/navy"

                app:layout_constraintBottom_toTopOf="@id/btnSave"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.45"
                app:layout_constraintStart_toEndOf="@+id/imgPlaceImage"
                app:layout_constraintTop_toBottomOf="@id/txtLocationMain"
                app:layout_constraintVertical_bias="0.019"
            />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/add_screen_btn_save_marginTop"
                android:backgroundTint="@color/dodgerBlue"
                android:padding="13dp"
                android:gravity="center"

                android:paddingTop="@dimen/add_screen_btn_save_paddingTopBottom"
                android:paddingBottom="@dimen/add_screen_btn_save_paddingTopBottom"
                android:text="@string/btn_text_save"
                android:textColor="@color/white"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgPlaceImage"
            />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>